--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@hookform/resolvers": "^3.3.3",
     "@next/font": "^14.0.4",
     "@splinetool/react-spline": "^2.2.6",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.1.0",
+    "easy-react-text-loop": "^1.0.2",
     "framer-motion": "^10.17.0",
     "next": "14.0.4",
     "react": "^18.2.0",
@@ -19,6 +23,7 @@
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
     "react-loader-spinner": "^6.1.6",
+    "react-scroll": "^1.9.0",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
