--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.1.0",
     "easy-react-text-loop": "^1.0.2",
+    "firebase": "^10.7.2",
     "framer-motion": "^10.17.0",
     "next": "14.0.4",
     "react": "^18.2.0",
