--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@erexstudio/react-read-more-text": "^1.0.2",
+    "@firebase/analytics": "^0.10.1",
     "@hookform/resolvers": "^3.3.3",
     "@next/font": "^14.0.4",
     "@splinetool/react-spline": "^2.2.6",
