add new hover effect sociallink

--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
-    "@erexstudio/react-read-more-text": "^1.0.2",
     "@firebase/analytics": "^0.10.1",
     "@hookform/resolvers": "^3.3.3",
     "@next/font": "^14.0.4",
-    "@splinetool/react-spline": "^2.2.6",
+    "@tsparticles/engine": "^3.2.2",
     "@tsparticles/react": "^3.0.0",
-    "@tsparticles/slim": "^3.1.0",
+    "@tsparticles/slim": "^3.2.2",
     "easy-react-text-loop": "^1.0.2",
     "firebase": "^10.7.2",
-    "framer-motion": "^10.17.0",
+    "framer-motion": "^10.18.0",
     "next": "14.0.4",
+    "nextjs-toploader": "^1.6.6",
     "react": "^18.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
