--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@tsparticles/engine": "^3.2.2",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.2.2",
-    "easy-react-text-loop": "^1.0.2",
+    "clsx": "^2.1.0",
     "firebase": "^10.7.2",
     "framer-motion": "^10.18.0",
     "next": "14.0.4",
@@ -30,9 +30,11 @@
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
+    "tailwind-merge": "^2.2.1",
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@types/react": "18.2.66",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
