--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "@emailjs/browser": "^3.11.0",
     "@firebase/analytics": "^0.10.1",
     "@hookform/resolvers": "^3.3.3",
-    "@next/font": "^14.0.4",
+    "@next/font": "^14.1.3",
     "@tsparticles/engine": "^3.2.2",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.2.2",
     "clsx": "^2.1.0",
     "firebase": "^10.7.2",
     "framer-motion": "^10.18.0",
+    "lottie-react": "^2.4.0",
     "next": "14.0.4",
     "nextjs-toploader": "^1.6.6",
     "react": "^18.2.0",
