--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "firebase": "^10.7.2",
     "framer-motion": "^10.18.0",
     "lottie-react": "^2.4.0",
-    "next": "14.0.4",
+    "next": "^14.2.0-canary.46",
     "nextjs-toploader": "^1.6.6",
     "react": "^18.2.0",
     "react-dom": "^18",
