--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "sitemap": "next-sitemap --config next-sitemap.config.js",
+    "lint": "next lint",
+    "export":"next build && next export"
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
@@ -21,6 +23,7 @@
     "framer-motion": "^10.18.0",
     "lottie-react": "^2.4.0",
     "next": "^14.2.0-canary.46",
+  
     "react": "^18.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
@@ -37,6 +40,7 @@
     "@types/react": "18.2.66",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
+    "next-sitemap": "^4.2.3",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
