--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "next build",
     "start": "next start",
     "sitemap": "next-sitemap --config next-sitemap.config.js",
-    "lint": "next lint",
-    "export":"next build && next export"
+    "lint": "next lint"
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
@@ -23,7 +22,6 @@
     "framer-motion": "^10.18.0",
     "lottie-react": "^2.4.0",
     "next": "^14.2.0-canary.46",
-  
     "react": "^18.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
@@ -40,8 +38,8 @@
     "@types/react": "18.2.66",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "next-sitemap": "^4.2.3",
     "eslint-config-next": "14.0.4",
+    "next-sitemap": "^4.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
   }
