--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "clsx": "^2.1.0",
     "firebase": "^10.7.2",
     "framer-motion": "^10.18.0",
+    "html-react-parser": "^5.1.10",
+    "jodit-react": "^4.0.15",
     "lottie-react": "^2.4.0",
     "next": "^14.2.0-canary.46",
+    "popmotion": "^11.0.5",
     "react": "^18.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
