--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "@tsparticles/engine": "^3.2.2",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.2.2",
+    "@vercel/analytics": "^1.2.2",
+    "@vercel/speed-insights": "^1.0.10",
+    "axios": "^1.6.8",
     "clsx": "^2.1.0",
     "firebase": "^10.7.2",
     "framer-motion": "^10.18.0",
     "html-react-parser": "^5.1.10",
     "jodit-react": "^4.0.15",
     "lottie-react": "^2.4.0",
+    "moment": "^2.30.1",
     "next": "^14.2.0-canary.46",
     "popmotion": "^11.0.5",
     "react": "^18.2.0",
