--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jodit-react": "^4.0.15",
     "lottie-react": "^2.4.0",
     "moment": "^2.30.1",
+    "mongoose": "^8.3.3",
     "next": "^14.2.0-canary.46",
     "popmotion": "^11.0.5",
     "react": "^18.2.0",
